<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Biodata">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/napang"
            android:textSize="28dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/nunito_bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isinama"
            android:hint="Contoh : Budi"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="150dp"
            android:focusable="true"
            android:layout_alignParentStart="true"
            android:inputType="textUri"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/umkam"
            android:textSize="28dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="210dp"
            android:fontFamily="@font/nunito_bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/isiumur"
            android:hint="Contoh : 12"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="260dp"
            android:focusable="true"
            android:layout_alignParentStart="true"
            android:inputType="textUri"
            />

        <Button
            android:id="@+id/btnLanjut"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="550dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_rounded1"
            android:onClick="biodata"
            android:text="@string/selan"
            android:fontFamily="@font/nunito_bold"
            />
        
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>